# reminder_bot

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt
alembic/: env.py
alembic/versions/: 20260330_0001_initial.py  20260331_0002_recurrence_and_admin.py
app/: bot_commands.py  bot_factory.py  config.py  logging_config.py  main.py  web.py  worker_main.py
app/db/: init_db.py  models.py  session.py
app/handlers/: admin.py  common.py  reminders.py  ui.py
app/keyboards/: reply.py
app/middlewares/: logging.py
app/services/: reminder_parser.py  reminder_service.py  timezone_service.py
app/utils/: datetime_utils.py
app/workers/: reminder_worker.py
deploy/nginx/: reminder_bot.conf
deploy/scripts/: deploy_vps.sh
