[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "reminder_bot"
version = "0.1.0"
description = "Telegram bot for reminders"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.26.0",
    "SQLAlchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "tzdata>=2025.2",
    "aiohttp>=3.12.0",
    "alembic>=1.16.0",
    "psycopg2-binary>=2.9.10",
    "colorlog>=6.7.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.0",
    "mypy>=1.19.0",
    "black>=26.0.0",
    "pre-commit>=3.0.0",
]

# ─── Ruff ────────────────────────────────────────────────────────────────────
# Ruff заменяет flake8 + isort + pyupgrade + десятки других линтеров.
# Работает в 10–100× быстрее каждого из них по отдельности.
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (неиспользуемые импорты, переменные)
    "I",   # isort (порядок импортов)
    "UP",  # pyupgrade (современный синтаксис Python)
    "B",   # flake8-bugbear (частые баги)
    "C4",  # flake8-comprehensions (упрощение list/dict comprehensions)
    "SIM", # flake8-simplify (упрощение условий)
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",    # длина строки
    "SIM108",  # тернарный оператор — не всегда читаемее

    # RUF001/002/003 — ложные срабатывания на русском тексте.
    # Ruff считает кириллические буквы (с, е, о, В...) "ambiguous" потому что
    # они визуально похожи на латиницу. В русскоязычном проекте это неизбежно.
    "RUF001",
    "RUF002",
    "RUF003",

]

[tool.ruff.lint.isort]
known-first-party = [
    "app",
]

[tool.ruff.format]
# ruff format совместим с black — используем его вместо black для скорости
quote-style = "double"
indent-style = "space"

# ─── Mypy ────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = false
exclude = ["^alembic/"]

warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["alembic", "alembic.*"]
ignore_errors = true
